--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
           <i class="fa-solid fa-chevron-down fs-6 text-muted"></i>
         </div>
         <ul class="dropdown-menu shadow">
-          <li><a class="dropdown-item text-secondary fs-6" href="#">Store List</a></li>
+          <li><a class="dropdown-item text-secondary fs-6" href="stores.html">Store List</a></li>
           <li><a class="dropdown-item text-secondary" href="#">Store Grid</a></li>
           <li><a class="dropdown-item text-secondary" href="#">Store Single</a></li>
         </ul>
