--- a/stores.html
+++ b/stores.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <!-- custom css -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="assets/css/style.css"  />
 
     <!-- fontawesome cdn link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -29,7 +29,7 @@
               <h3 class="fw-bold fs-2">Stores</h3>
             </div>
             <div class="">
-              <img src="store-graphics (1).svg" class="img-fluid" alt="" />
+              <img src="assets/images/store-graphics (1).svg" class="img-fluid" alt="" />
             </div>
           </div>
         </div>
@@ -43,7 +43,7 @@
             <div class="card mb-3 px-4 py-4">
               <div class="row g-0">
                 <div class="col-lg-3 col-12">
-                  <img src="stores-logo-1.svg" class="img-fluid w-75 rounded-circle mt-2" alt="..." />
+                  <img src="assets/images/stores-logo-1.svg" class="img-fluid w-75 rounded-circle mt-2" alt="..." />
                 </div>
                 <div class="col-md-9 col-12">
                   <div class="card-body">
@@ -62,7 +62,7 @@
             <div class="card mb-3 px-4 py-4">
               <div class="row g-0">
                 <div class="col-lg-3 col-12">
-                  <img src="stores-logo-1.svg" class="img-fluid w-75 rounded-circle mt-2" alt="..." />
+                  <img src="assets/images/stores-logo-1.svg" class="img-fluid w-75 rounded-circle mt-2" alt="..." />
                 </div>
                 <div class="col-md-9 col-12">
                   <div class="card-body">
@@ -80,7 +80,7 @@
             <div class="card mb-3 px-4 py-4">
               <div class="row g-0">
                 <div class="col-lg-3 col-12">
-                  <img src="stores-logo-1.svg" class="img-fluid w-75 rounded-circle mt-2" alt="..." />
+                  <img src="assets/images/stores-logo-1.svg" class="img-fluid w-75 rounded-circle mt-2" alt="..." />
                 </div>
                 <div class="col-md-9 col-12">
                   <div class="card-body">
@@ -98,7 +98,7 @@
             <div class="card mb-3 px-4 py-4">
               <div class="row g-0">
                 <div class="col-lg-3 col-12">
-                  <img src="stores-logo-1.svg" class="img-fluid w-75 rounded-circle mt-2" alt="..." />
+                  <img src="assets/images/stores-logo-1.svg" class="img-fluid w-75 rounded-circle mt-2" alt="..." />
                 </div>
                 <div class="col-md-9 col-12">
                   <div class="card-body">
@@ -116,7 +116,7 @@
             <div class="card mb-3 px-4 py-4">
               <div class="row g-0">
                 <div class="col-lg-3 col-12">
-                  <img src="stores-logo-1.svg" class="img-fluid w-75 rounded-circle mt-2" alt="..." />
+                  <img src="assets/images/stores-logo-1.svg" class="img-fluid w-75 rounded-circle mt-2" alt="..." />
                 </div>
                 <div class="col-md-9 col-12">
                   <div class="card-body">
@@ -134,7 +134,7 @@
             <div class="card mb-3 px-4 py-4">
               <div class="row g-0">
                 <div class="col-lg-3 col-12">
-                  <img src="stores-logo-1.svg" class="img-fluid w-75 rounded-circle mt-2" alt="..." />
+                  <img src="assets/images/stores-logo-1.svg" class="img-fluid w-75 rounded-circle mt-2" alt="..." />
                 </div>
                 <div class="col-md-9 col-12">
                   <div class="card-body">
@@ -152,7 +152,7 @@
             <div class="card mb-3 px-4 py-4">
               <div class="row g-0">
                 <div class="col-lg-3 col-12">
-                  <img src="stores-logo-1.svg" class="img-fluid w-75 rounded-circle mt-2" alt="..." />
+                  <img src="assets/images/stores-logo-1.svg" class="img-fluid w-75 rounded-circle mt-2" alt="..." />
                 </div>
                 <div class="col-md-9 col-12">
                   <div class="card-body">
@@ -170,7 +170,7 @@
             <div class="card mb-3 px-4 py-4">
               <div class="row g-0">
                 <div class="col-lg-3 col-12">
-                  <img src="stores-logo-1.svg" class="img-fluid w-75 rounded-circle mt-2" alt="..." />
+                  <img src="assets/images/stores-logo-1.svg" class="img-fluid w-75 rounded-circle mt-2" alt="..." />
                 </div>
                 <div class="col-md-9 col-12">
                   <div class="card-body">
@@ -188,7 +188,7 @@
             <div class="card mb-3 px-4 py-4">
               <div class="row g-0">
                 <div class="col-lg-3 col-12">
-                  <img src="stores-logo-1.svg" class="img-fluid w-75 rounded-circle mt-2" alt="..." />
+                  <img src="assets/images/stores-logo-1.svg" class="img-fluid w-75 rounded-circle mt-2" alt="..." />
                 </div>
                 <div class="col-md-9 col-12">
                   <div class="card-body">
@@ -213,7 +213,7 @@
           <div class="card mb-3 px-4 py-4">
               <div class="row g-0">
                 <div class="col-lg-3 col-12">
-                  <img src="stores-logo-1.svg" class="img-fluid w-75 rounded-circle mt-2" alt="..." />
+                  <img src="assets/images/stores-logo-1.svg" class="img-fluid w-75 rounded-circle mt-2" alt="..." />
                 </div>
                 <div class="col-md-9 col-12">
                   <div class="card-body">
@@ -231,7 +231,7 @@
           <div class="card mb-3 px-4 py-4">
               <div class="row g-0">
                 <div class="col-lg-3 col-12">
-                  <img src="stores-logo-1.svg" class="img-fluid w-75 rounded-circle mt-2" alt="..." />
+                  <img src="assets/images/stores-logo-1.svg" class="img-fluid w-75 rounded-circle mt-2" alt="..." />
                 </div>
                 <div class="col-md-9 col-12">
                   <div class="card-body">
@@ -249,7 +249,7 @@
           <div class="card mb-3 px-4 py-4">
               <div class="row g-0">
                 <div class="col-lg-3 col-12">
-                  <img src="stores-logo-1.svg" class="img-fluid w-75 rounded-circle mt-2" alt="..." />
+                  <img src="assets/images/stores-logo-1.svg" class="img-fluid w-75 rounded-circle mt-2" alt="..." />
                 </div>
                 <div class="col-md-9 col-12">
                   <div class="card-body">
@@ -267,7 +267,7 @@
           <div class="card mb-3 px-4 py-4">
               <div class="row g-0">
                 <div class="col-lg-3 col-12">
-                  <img src="stores-logo-1.svg" class="img-fluid w-75 rounded-circle mt-2" alt="..." />
+                  <img src="assets/images/stores-logo-1.svg" class="img-fluid w-75 rounded-circle mt-2" alt="..." />
                 </div>
                 <div class="col-md-9 col-12">
                   <div class="card-body">
@@ -285,7 +285,7 @@
           <div class="card mb-3 px-4 py-4">
               <div class="row g-0">
                 <div class="col-lg-3 col-12">
-                  <img src="stores-logo-1.svg" class="img-fluid w-75 rounded-circle mt-2" alt="..." />
+                  <img src="assets/images/stores-logo-1.svg" class="img-fluid w-75 rounded-circle mt-2" alt="..." />
                 </div>
                 <div class="col-md-9 col-12">
                   <div class="card-body">
@@ -303,7 +303,7 @@
           <div class="card mb-3 px-4 py-4">
               <div class="row g-0">
                 <div class="col-lg-3 col-12">
-                  <img src="stores-logo-1.svg" class="img-fluid w-75 rounded-circle mt-2" alt="..." />
+                  <img src="assets/images/stores-logo-1.svg" class="img-fluid w-75 rounded-circle mt-2" alt="..." />
                 </div>
                 <div class="col-md-9 col-12">
                   <div class="card-body">
@@ -385,16 +385,16 @@
         <div class="row">
           <div class="col-lg-6">
             Payment Partners
-            <img src="amazonpay.svg" class="img-fluid" alt="" />
-            <img src="american-express.svg" class="img-fluid" alt="" />
-            <img src="mastercard.svg" class="img-fluid" alt="" />
-            <img src="paypal.svg" class="img-fluid" alt="" />
-            <img src="visa.svg" class="img-fluid" alt="" />
+            <img src="assets/images/amazonpay.svg" class="img-fluid" alt="" />
+            <img src="assets/images/american-express.svg" class="img-fluid" alt="" />
+            <img src="assets/images/mastercard.svg" class="img-fluid" alt="" />
+            <img src="assets/images/paypal.svg" class="img-fluid" alt="" />
+            <img src="assets/images/visa.svg" class="img-fluid" alt="" />
           </div>
           <div class="col-lg-6">
             Get deliveries with FreshCart
-            <img src="googleplay-btn.svg" class="img-fluid w-25" alt="" />
-            <img src="googleplay-btn.svg" class="img-fluid w-25" alt="" />
+            <img src="assets/images/googleplay-btn.svg" class="img-fluid w-25" alt="" />
+            <img src="assets/images/googleplay-btn.svg" class="img-fluid w-25" alt="" />
           </div>
         </div>
         <hr />
@@ -416,6 +416,6 @@
       </div>
     </section>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+    <script src="assets/images/https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
   </body>
 </html>
