--- a/whishlist.html
+++ b/whishlist.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Jost:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css" >
   </head>
   <body>
     <div class="container mt-3">
@@ -40,7 +40,7 @@
                 <label class="form-check-label" for="checkDefault"> </label>
               </div>
             </th>
-            <td><img src="product-img-18.jpg " width="50px" alt=""></td>
+            <td><img src="assets/images/product-img-18.jpg " width="50px" alt=""></td>
             <td>
                 <h6>Fresh Banana</h6>
                  <p class="text-secondary">2pc</p>
@@ -58,7 +58,7 @@
                 <label class="form-check-label" for="checkDefault"> </label>
               </div>
             </th>
-            <td><img src="product-img-19.jpg " width="50px" alt=""></td>
+            <td><img src="assets/images/product-img-19.jpg " width="50px" alt=""></td>
             <td>
                    <h6>Beat Root</h6>
                  <p class="text-secondary">1kg</p> 
@@ -75,7 +75,7 @@
                 <label class="form-check-label" for="checkDefault"> </label>
               </div>
             </th>
-            <td><img src="product-img-13.jpg " width="50px" alt=""></td>
+            <td><img src="assets/images/product-img-13.jpg " width="50px" alt=""></td>
             <td>
               <h6>Gold Pineapple</h6>
                  <p class="text-secondary">1kg</p>
@@ -91,7 +91,7 @@
                 <label class="form-check-label" for="checkDefault"> </label>
               </div>
             </th>
-            <td><img src="product-img-17.jpg " width="50px"  alt=""></td>
+            <td><img src="assets/images/product-img-17.jpg " width="50px"  alt=""></td>
             <td>
                <h6>Fresh Kiwi</h6>
                  <p class="text-secondary">1kg</p>   
@@ -168,16 +168,16 @@
         <div class="row">
             <div class="col-lg-6">
                 Payment Partners
-                <img src="amazonpay.svg" class="img-fluid" alt="">
-                <img src="american-express.svg" class="img-fluid" alt="">
-                <img src="mastercard.svg" class="img-fluid" alt="">
-                <img src="paypal.svg" class="img-fluid" alt="">
-                 <img src="visa.svg" class="img-fluid" alt="">
+                <img src="assets/images/amazonpay.svg" class="img-fluid" alt="">
+                <img src="assets/images/american-express.svg" class="img-fluid" alt="">
+                <img src="assets/images/mastercard.svg" class="img-fluid" alt="">
+                <img src="assets/images/paypal.svg" class="img-fluid" alt="">
+                 <img src="assets/images/visa.svg" class="img-fluid" alt="">
             </div>
             <div class="col-lg-6">
             Get deliveries with FreshCart
-            <img src="googleplay-btn.svg" class="img-fluid w-25" alt="">
-            <img src="googleplay-btn.svg" class="img-fluid w-25" alt="">
+            <img src="assets/images/googleplay-btn.svg" class="img-fluid w-25" alt="">
+            <img src="assets/images/googleplay-btn.svg" class="img-fluid w-25" alt="">
             </div>
         </div>
         <hr>
