--- a/category.html
+++ b/category.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <!-- custom css -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="assets/css/style.css"  />
 
     <!-- fontawesome cdn link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -324,7 +324,7 @@
             </div>
             <div class="">
               <div class="card mt-3">
-                <img src="assortment-citrus-fruits.png" class="img-fluid border-0" alt="..." />
+                <img src="assets/images/assortment-citrus-fruits.png" class="img-fluid border-0" alt="..." />
                 <div class="card-img-overlay">
                   <h5 class="card-title"></h5>
                   <h4 class="card-text fs-4 fw-bold">Fresh Fruits</h4>
@@ -345,7 +345,7 @@
                   <span class="badge bg-warning w-25 mt-1 ms-1">Sale</span>
                   <span class="badge bg-success mt-1 w-25 ms-1">11%</span>
                   <div class="position-relative shaha">
-                    <img src="product-img-3 (1).jpg" class="img-fluid" alt="..." />
+                    <img src="assets/images/product-img-3 (1).jpg" class="img-fluid" alt="..." />
 
                     <div class="position-absolute shah popular">
                       <button type="button" data-bs-target="#productViewModal" data-bs-toggle="modal" class="border-0" data-bs-toggle="tooltip" title="Quick View"><i class="fa-regular fa-eye bg-white p-2 shadow rounded-2"></i></button>
@@ -380,7 +380,7 @@
                   <span class="badge bg-warning w-25 mt-1 ms-1">Sale</span>
                   <span class="badge bg-success mt-1 w-25 ms-1">11%</span>
                   <div class="position-relative shaha">
-                    <img src="product-img-1 (1).jpg" class="img-fluid" alt="..." />
+                    <img src="assets/images/product-img-1 (1).jpg" class="img-fluid" alt="..." />
 
                     <div class="position-absolute shah popular">
                       <button type="button" data-bs-target="#productViewModal" data-bs-toggle="modal" class="border-0" data-bs-toggle="tooltip" title="Quick View"><i class="fa-regular fa-eye bg-white p-2 shadow rounded-2"></i></button>
@@ -415,7 +415,7 @@
                   <span class="badge bg-warning w-25 mt-1 ms-1">Sale</span>
                   <span class="badge bg-success mt-1 w-25 ms-1">11%</span>
                   <div class="position-relative shaha">
-                    <img src="pic1.jpg" class="img-fluid" alt="..." />
+                    <img src="assets/images/pic1.jpg" class="img-fluid" alt="..." />
 
                     <div class="position-absolute shah popular">
                       <button type="button" data-bs-target="#productViewModal" data-bs-toggle="modal" class="border-0" data-bs-toggle="tooltip" title="Quick View"><i class="fa-regular fa-eye bg-white p-2 shadow rounded-2"></i></button>
@@ -450,7 +450,7 @@
                   <span class="badge bg-warning w-25 mt-1 ms-1">Sale</span>
                   <span class="badge bg-success mt-1 w-25 ms-1">11%</span>
                   <div class="position-relative shaha">
-                    <img src="pic2.jpg" class="img-fluid" alt="..." />
+                    <img src="assets/images/pic2.jpg" class="img-fluid" alt="..." />
 
                     <div class="position-absolute shah popular">
                       <button type="button" data-bs-target="#productViewModal" data-bs-toggle="modal" class="border-0" data-bs-toggle="tooltip" title="Quick View"><i class="fa-regular fa-eye bg-white p-2 shadow rounded-2"></i></button>
@@ -551,16 +551,16 @@
         <div class="row">
           <div class="col-lg-6">
             Payment Partners
-            <img src="amazonpay.svg" class="img-fluid" alt="" />
-            <img src="american-express.svg" class="img-fluid" alt="" />
-            <img src="mastercard.svg" class="img-fluid" alt="" />
-            <img src="paypal.svg" class="img-fluid" alt="" />
-            <img src="visa.svg" class="img-fluid" alt="" />
+            <img src="assets/images/amazonpay.svg" class="img-fluid" alt="" />
+            <img src="assets/images/american-express.svg" class="img-fluid" alt="" />
+            <img src="assets/images/mastercard.svg" class="img-fluid" alt="" />
+            <img src="assets/images/paypal.svg" class="img-fluid" alt="" />
+            <img src="assets/images/visa.svg" class="img-fluid" alt="" />
           </div>
           <div class="col-lg-6">
             Get deliveries with FreshCart
-            <img src="googleplay-btn.svg" class="img-fluid w-25" alt="" />
-            <img src="googleplay-btn.svg" class="img-fluid w-25" alt="" />
+            <img src="assets/images/googleplay-btn.svg" class="img-fluid w-25" alt="" />
+            <img src="assets/images/googleplay-btn.svg" class="img-fluid w-25" alt="" />
           </div>
         </div>
         <hr />
@@ -640,7 +640,7 @@
       </div>
       <div class="col-lg-3">
         <div class="card mt-3">
-          <img src="assortment-citrus-fruits.png" class="img-fluid border-0" alt="..." />
+          <img src="assets/images/assortment-citrus-fruits.png" class="img-fluid border-0" alt="..." />
           <div class="card-img-overlay">
             <h5 class="card-title"></h5>
             <h4 class="card-text fs-4 fw-bold">Fresh Fruits</h4>
@@ -651,6 +651,6 @@
       </div>
     </div>  -->
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+    <script src="assets/images/https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
   </body>
 </html>
