--- a/info.html
+++ b/info.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <!-- custom css -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="assets/css/style.css"  />
 
     <!-- fontawesome cdn link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -34,23 +34,23 @@
                 <div id="carouselExample" class="carousel slide">
                   <div class="carousel-inner">
                     <div class="carousel-item active">
-                      <img src="product-single-img-4 (2).jpg" class="d-block w-100" alt="..." />
+                      <img src="assets/images/product-single-img-4 (2).jpg" class="d-block w-100" alt="..." />
                     </div>
                     <div class="carousel-item active">
-                      <img src="product-single-img-1.jpg" class="d-block img-fluid w-100" alt="..." />
+                      <img src="assets/images/product-single-img-1.jpg" class="d-block img-fluid w-100" alt="..." />
                     </div>
                   </div>
                   <div class="d-flex">
                     <div>
                       <button class="border-0 bg-transparent mt-3" type="button" data-bs-target="#carouselExample" data-bs-slide="1">
                         <span class="" aria-hidden="true"></span>
-                        <span class=""><img src="product-single-img-1.jpg" class="img-fluid w-50" alt="" /></span>
+                        <span class=""><img src="assets/images/product-single-img-1.jpg" class="img-fluid w-50" alt="" /></span>
                       </button>
                     </div>
                     <div>
                       <button class="border-0 bg-transparent mt-3" type="button" data-bs-target="#carouselExample" data-bs-slide="2">
                         <span class="" aria-hidden="true"></span>
-                        <span class=""><img src="product-single-img-4.jpg" class="img-fluid w-50" alt="" /></span>
+                        <span class=""><img src="assets/images/product-single-img-4.jpg" class="img-fluid w-50" alt="" /></span>
                       </button>
                     </div>
                   </div>
@@ -237,7 +237,7 @@
               <span class="badge bg-warning w-25 mt-1 ms-1">Sale</span>
               <span class="badge bg-success mt-1 w-25 ms-1">11%</span>
               <div class="position-relative shaha">
-                <img src="product-img-3 (1).jpg" class="img-fluid" alt="..." />
+                <img src="assets/images/product-img-3 (1).jpg" class="img-fluid" alt="..." />
 
                 <div class="position-absolute shah popular">
                   <button type="button" data-bs-target="#productViewModal" data-bs-toggle="modal" class="border-0" data-bs-toggle="tooltip" title="Quick View"><i class="fa-regular fa-eye bg-white p-2 shadow rounded-2"></i></button>
@@ -272,7 +272,7 @@
               <span class="badge bg-warning w-25 mt-1 ms-1">Sale</span>
               <span class="badge bg-success mt-1 w-25 ms-1">11%</span>
               <div class="position-relative shaha">
-                <img src="product-img-1 (1).jpg" class="img-fluid" alt="..." />
+                <img src="assets/images/product-img-1 (1).jpg" class="img-fluid" alt="..." />
 
                 <div class="position-absolute shah popular">
                   <button type="button" data-bs-target="#productViewModal" data-bs-toggle="modal" class="border-0" data-bs-toggle="tooltip" title="Quick View"><i class="fa-regular fa-eye bg-white p-2 shadow rounded-2"></i></button>
@@ -307,7 +307,7 @@
               <span class="badge bg-warning w-25 mt-1 ms-1">Sale</span>
               <span class="badge bg-success mt-1 w-25 ms-1">11%</span>
               <div class="position-relative shaha">
-                <img src="pic1.jpg" class="img-fluid" alt="..." />
+                <img src="assets/images/pic1.jpg" class="img-fluid" alt="..." />
 
                 <div class="position-absolute shah popular">
                   <button type="button" data-bs-target="#productViewModal" data-bs-toggle="modal" class="border-0" data-bs-toggle="tooltip" title="Quick View"><i class="fa-regular fa-eye bg-white p-2 shadow rounded-2"></i></button>
@@ -342,7 +342,7 @@
               <span class="badge bg-warning w-25 mt-1 ms-1">Sale</span>
               <span class="badge bg-success mt-1 w-25 ms-1">11%</span>
               <div class="position-relative shaha">
-                <img src="pic2.jpg" class="img-fluid" alt="..." />
+                <img src="assets/images/pic2.jpg" class="img-fluid" alt="..." />
 
                 <div class="position-absolute shah popular">
                   <button type="button" data-bs-target="#productViewModal" data-bs-toggle="modal" class="border-0" data-bs-toggle="tooltip" title="Quick View"><i class="fa-regular fa-eye bg-white p-2 shadow rounded-2"></i></button>
@@ -377,7 +377,7 @@
               <span class="badge bg-warning w-25 mt-1 ms-1">Sale</span>
               <span class="badge bg-success mt-1 w-25 ms-1">11%</span>
               <div class="position-relative shaha">
-                <img src="pic3.jpg" class="img-fluid" alt="..." />
+                <img src="assets/images/pic3.jpg" class="img-fluid" alt="..." />
 
                 <div class="position-absolute shah popular">
                   <button type="button" data-bs-target="#productViewModal" data-bs-toggle="modal" class="border-0" data-bs-toggle="tooltip" title="Quick View"><i class="fa-regular fa-eye bg-white p-2 shadow rounded-2"></i></button>
@@ -476,16 +476,16 @@
         <div class="row">
           <div class="col-lg-6">
             Payment Partners
-            <img src="amazonpay.svg" class="img-fluid" alt="" />
-            <img src="american-express.svg" class="img-fluid" alt="" />
-            <img src="mastercard.svg" class="img-fluid" alt="" />
-            <img src="paypal.svg" class="img-fluid" alt="" />
-            <img src="visa.svg" class="img-fluid" alt="" />
+            <img src="assets/images/amazonpay.svg" class="img-fluid" alt="" />
+            <img src="assets/images/american-express.svg" class="img-fluid" alt="" />
+            <img src="assets/images/mastercard.svg" class="img-fluid" alt="" />
+            <img src="assets/images/paypal.svg" class="img-fluid" alt="" />
+            <img src="assets/images/visa.svg" class="img-fluid" alt="" />
           </div>
           <div class="col-lg-6">
             Get deliveries with FreshCart
-            <img src="googleplay-btn.svg" class="img-fluid w-25" alt="" />
-            <img src="googleplay-btn.svg" class="img-fluid w-25" alt="" />
+            <img src="assets/images/googleplay-btn.svg" class="img-fluid w-25" alt="" />
+            <img src="assets/images/googleplay-btn.svg" class="img-fluid w-25" alt="" />
           </div>
         </div>
         <hr />
@@ -507,6 +507,6 @@
       </div>
     </section>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+    <script src="assets/images/https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
   </body>
 </html>
